--- a/pages/manage/manageUsers.html
+++ b/pages/manage/manageUsers.html
@@ -78,15 +78,15 @@
                                 href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                                 شده</a></li>
-                        <li><a class="waves-effect waves-dark"
+                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
                                     class="fas fa-check-square"></i><span class="hide-menu"></span> تایید کاربران
                             </a></li>
-                        <li><a class="waves-effect waves-dark"
+                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/manageusers" aria-expanded="false"><i
                                     class="fas fa-tasks"></i><span class="hide-menu"></span> مدیریت کاربران
                             </a></li>
-                        <li><a class="waves-effect waves-dark" href="http://localhost:8080/IE-proj//index.html#!/report"
+                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark" href="http://localhost:8080/IE-proj//index.html#!/report"
                                 aria-expanded="false"><i class="far fa-newspaper"></i><span
                                     class="hide-menu"></span>گزارش گیری از سیستم</a>
                         </li>
