--- a/pages/casesStatus/caseStatus.html
+++ b/pages/casesStatus/caseStatus.html
@@ -81,17 +81,17 @@
                                 href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                                 شده</a></li>
-                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark"
+                        <li ng-class="adminAccess"><a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
                                     class="fas fa-check-square"></i><span class="hide-menu"></span> تایید کاربران
                             </a></li>
-                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark"
+                        <li ng-class="adminAccess"><a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/manageusers" aria-expanded="false"><i
                                     class="fas fa-tasks"></i><span class="hide-menu"></span> مدیریت کاربران
                             </a></li>
-                        <li ng-class = "adminAccess"><a class="waves-effect waves-dark" href="http://localhost:8080/IE-proj//index.html#!/report"
-                                aria-expanded="false"><i class="far fa-newspaper"></i><span
-                                    class="hide-menu"></span>گزارش گیری از سیستم</a>
+                        <li ng-class="adminAccess"><a class="waves-effect waves-dark"
+                                href="http://localhost:8080/IE-proj//index.html#!/report" aria-expanded="false"><i
+                                    class="far fa-newspaper"></i><span class="hide-menu"></span>گزارش گیری از سیستم</a>
                         </li>
 
                     </ul>
@@ -189,75 +189,59 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td>۱</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>عطیه نوروززاده</td>
-                                                <td>درسا سمیعی</td>
-                                                <td><span class="badge badge-pill badge-secondary">باز</span> </td>
-                                                <td></td>
-                                                <td><span class="badge badge-pill badge-info">معمولی</span> </td>
-                                                <td> 1397/03/27 17:09 </td>
-                                            </tr>
-                                            <tr>
-                                                <td>۲</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>حانیه</td>
-                                                <td>درسا سمیعی</td>
-                                                <td><span class="badge badge-pill badge-success">بسته</span></td>
-                                                <td> <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-default"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-default"></i></a></td>
-                                                <td><span class="badge badge-pill badge-danger">اورژانسی</span></td>
-                                                <td> 1397/03/27 17:09 </td>
-                                            </tr>
-                                            <tr>
-                                                <td>۳</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>عطیه نوروززاده</td>
-                                                <td>درسا سمیعی</td>
-                                                <td><span class="badge badge-pill badge-warning">در حال بررسی</span>
-                                                <td></td>
-                                                <td><span class="badge badge-pill badge-danger">اورژانسی</span> </td>
+                                            <tr ng-repeat="x in casestatus">
+                                                <td>{{x.number}}</td>
+                                                <td>{{x.title}}</td>
+                                                <td>{{x.assignee}}</td>
+                                                <td>{{x.assigner}}</td>
+
+                                                <td ng-switch on="x.status">
+                                                    <span ng-switch-when="باز"
+                                                        class="badge badge-pill badge-success">باز</span>
+                                                    <span ng-switch-when="بسته"
+                                                        class="badge badge-pill badge-danger">بسته</span>
+                                                    <span ng-switch-when="تعویق"
+                                                        class="badge badge-pill badge-info">تعویق</span>
+                                                    <span ng-switch-default class="badge badge-pill badge-warning">در
+                                                        حال بررسی</span>
+
                                                 </td>
-                                                <td> 1397/03/27 17:09 </td>
+                                                <td ng-switch on="x.status">
+
+                                                    <span ng-switch-when="بسته">
+                                       
+                                                        <div class="starrating risingstar d-flex justify-content-center flex-row-reverse">
+                                                                <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star">۵</label>
+                                                                <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="4 star">۴</label>
+                                                                <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="3 star">۳</label>
+                                                                <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="2 star">۲</label>
+                                                                <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="1 star">۱</label>
+                                                            </div>
+                                                    </span>
+                                                    <span n ng-switch-default>
+                                                          <!-- <div class="starrating risingstar d-flex justify-content-center flex-row-reverse">
+                                                                <input type="radio" disabled name="rating" value="5" /><label for="star5" title="5 star">۵</label>
+                                                                <input type="radio" disabled name="rating" value="4" /><label for="star4" title="4 star">۴</label>
+                                                                <input type="radio" disabled name="rating" value="3" /><label for="star3" title="3 star">۳</label>
+                                                                <input type="radio" disabled name="rating" value="2" /><label for="star2" title="2 star">۲</label>
+                                                                <input type="radio" disabled name="rating" value="1" /><label for="star1" title="1 star">۱</label>
+                                                            </div> -->
+                                                    </span>
+
+                                                </td>
+
+                                                <td ng-switch on="x.urgent">
+                                                    <span ng-switch-when="معمولی"
+                                                        class="badge badge-pill badge-info">معمولی</span>
+                                                    <span ng-switch-when="اورژانسی"
+                                                        class="badge badge-pill badge-danger">اورژانسی</span>
+                                                    <span ng-switch-default
+                                                        class="badge badge-pill badge-warning">متوسط</span>
+                                                </td>
+
+                                                <td> {{x.date}} </td>
                                             </tr>
-                                            <tr>
-                                                <td>۴</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>عطیه نوروززاده</td>
-                                                <td>استاد</td>
-                                                <td><span class="badge badge-pill badge-info">تعویق</span> </td>
-                                                <td></td>
-                                                <td><span class="badge badge-pill badge-warning">متوسط</span> </td>
-                                                <td> 1397/03/27 17:09 </td>
-                                            </tr>
-                                            <tr>
-                                                <td>۵</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>حانیه</td>
-                                                <td>درسا سمیعی</td>
-                                                <td><span class="badge badge-pill badge-success">بسته</span> </td>
-                                                <td> <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-c-yellow"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-default"></i></a>
-                                                    <a href="#!"><i class="fa fa-star f-12 text-default"></i></a></td>
-                                                <td><span class="badge badge-pill badge-danger">اورژانسی</span> </td>
-                                                <td> 1397/03/27 17:09 </td>
-                                            </tr>
-                                            <tr>
-                                                <td>۶</td>
-                                                <td>سیستم سرمایش</td>
-                                                <td>عطیه نوروززاده</td>
-                                                <td>استاد</td>
-                                                <td><span class="badge badge-pill badge-secondary">باز</span> </td>
-                                                <td></td>
-                                                <td><span class="badge badge-pill badge-danger">اورژانسی</span> </td>
-                                                <td> 1397/03/27 17:09 </td>
-                                            </tr>
+
                                         </tbody>
                                     </table>
                                 </div>
