fix landing counter

--- a/pages/landing/landing.html
+++ b/pages/landing/landing.html
@@ -188,7 +188,8 @@
     </footer>
 
 
-
+    <script src="../js/plugins/plugins.js"></script>
+    <script src="../js/active.js"></script>
 
 </body>
 
