responsive some elements

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -24,7 +24,7 @@
 
 
                 <!-- info section, image and title of page -->
-                <div class="info col-md-6">
+                <div class="info col-md-6 col-sm-6 col-12">
                     <span><i class="fas fa-graduation-cap"></i></span>
                     <span>سامانه ثبت تیکت دانشکاه شهید بهشتی</span>
                 </div>
@@ -32,7 +32,7 @@
 
 
                 <!-- login & register button -->
-                <div class="nav-btns col-md-6">
+                <div class="nav-btns col-md-6  col-sm-6 col-12">
                     خوش آمدی {{name}}!
                     <button class="btn btn-primary"><i class="fas fa-user"></i></button>
                 </div>
