--- a/pages/landing/landing.html
+++ b/pages/landing/landing.html
@@ -21,20 +21,20 @@
     <div class="green-nav">
         <header>
 
-            <!-- green navbar shown at load -->
-            <div id="list-nav" class="row">
+          <!-- green navbar shown at load -->
+          <div id="list-nav" class="row">
 
 
-                <!-- info section, image and title of page -->
-                <div class="info col-md-6">
-                    <span><i class="fas fa-graduation-cap"></i></span>
-                    <span>سامانه ثبت تیکت دانشکاه شهید بهشتی</span>
-                </div>
+            <!-- info section, image and title of page -->
+            <div class="info  col-sm-8 col-8 text-right">
+                <span><i class="fas fa-graduation-cap"></i></span>
+                <span>سامانه ثبت تیکت دانشکاه شهید بهشتی</span>
+            </div>
 
 
 
-                <!-- login & register button -->
-                <div class="nav-btns col-md-6">
+            <!-- login & register button -->
+            <div class="nav-btns  col-sm-4 col-4 text-left">
                     <button onclick="location.href =location.href+ 'login';" class="btn btn-primary"><i
                             class="fas fa-sign-in-alt"></i></button>
 
