--- a/pages/casesStatus/caseStatus.html
+++ b/pages/casesStatus/caseStatus.html
@@ -148,9 +148,10 @@
                             title="کاربر مسوول را انتخاب کنید" name="role" multiple class="selectpicker"
                             data-live-search="true">
                             <option selected>عطیه نوروززاده</option>
-                            <option selected>حانیه</option>
-                            <option selected>کارمند</option>
-                            <option selected>استاد و مدیر</option>
+                            <option selected>درسا سمیعی</option>
+                            <option selected>علی علوی</option>
+                            <option selected>علی محبوی</option>
+                            <option selected>سیما حمیدی</option>
                         </select>
                     </div>
                     <div class="select-div col-sm-4">
@@ -159,9 +160,9 @@
                             title="کاربر ارسال کننده را انتخاب کنید" name="role" multiple class="selectpicker"
                             data-live-search="true">
                             <option selected>درسا سمیعی</option>
-                            <option selected>استاد</option>
-                            <option selected>مدیر</option>
-                            <option selected>کارمند</option>
+                            <option selected>نقی نادری</option>
+                            <option selected>عطیه ناظری</option>
+                            <option selected>علی علوی</option>
                             <option selected>استاد و مدیر</option>
                         </select>
                     </div>
@@ -202,8 +203,7 @@
                                                         class="badge badge-pill badge-danger">بسته</span>
                                                     <span ng-switch-when="تعویق"
                                                         class="badge badge-pill badge-info">تعویق</span>
-                                                    <span ng-switch-default class="badge badge-pill badge-warning">در
-                                                        حال بررسی</span>
+                                                    <span ng-switch-default class="badge badge-pill badge-warning">در حال بررسی</span>
 
                                                 </td>
                                                 <td ng-switch on="x.status">
@@ -219,13 +219,7 @@
                                                             </div>
                                                     </span>
                                                     <span n ng-switch-default>
-                                                          <!-- <div class="starrating risingstar d-flex justify-content-center flex-row-reverse">
-                                                                <input type="radio" disabled name="rating" value="5" /><label for="star5" title="5 star">۵</label>
-                                                                <input type="radio" disabled name="rating" value="4" /><label for="star4" title="4 star">۴</label>
-                                                                <input type="radio" disabled name="rating" value="3" /><label for="star3" title="3 star">۳</label>
-                                                                <input type="radio" disabled name="rating" value="2" /><label for="star2" title="2 star">۲</label>
-                                                                <input type="radio" disabled name="rating" value="1" /><label for="star1" title="1 star">۱</label>
-                                                            </div> -->
+                                   
                                                     </span>
 
                                                 </td>
