-fix all issues

--- a/pages/reporting/reporting.html
+++ b/pages/reporting/reporting.html
@@ -196,7 +196,7 @@
                         <div class="card">
 
                             <div class="card-body">
-                                <h4 class="card-title m-b-0">شروع و پایان مورد ها</h4>
+                                <h4 class="card-title m-b-0">عملکرد نسبت به ماه گذشته</h4>
                                 <div id="timechart"></div>
                             </div>
                         </div>
