--- a/src/main/resources/static/pages/dashboard/dashboard.html
+++ b/src/main/resources/static/pages/dashboard/dashboard.html
@@ -68,28 +68,28 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li> <a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/dashboard" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/dashboard" aria-expanded="false"><i
                                     class="fa fa-home"></i><span class="hide-menu">داشبورد</span></a></li>
                         <li> <a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/profile" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/profile" aria-expanded="false"><i
                                     class="fa fa-user"></i><span class="hide-menu">پروفایل</span></a></li>
                         <li> <a class="waves-effect waves-dark" href="http://localhost:8080/#!/case"
                                 aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"></span>ثبت
                                 مورد</a></li>
                         <li> <a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/status" aria-expanded="false"><i
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                                 شده</a></li>
                         <li ng-class="adminAccess"><a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/authorize" aria-expanded="false"><i
                                     class="fas fa-check-square"></i><span class="hide-menu"></span> تایید کاربران
                             </a></li>
                         <li ng-class="adminAccess"><a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/manageusers" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/manageusers" aria-expanded="false"><i
                                     class="fas fa-tasks"></i><span class="hide-menu"></span> مدیریت کاربران
                             </a></li>
                         <li ng-class="adminAccess"><a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/report" aria-expanded="false"><i
+                                href="http://localhost:8080/#!/report" aria-expanded="false"><i
                                     class="far fa-newspaper"></i><span class="hide-menu"></span>گزارش گیری از سیستم</a>
                         </li>
 
