--- a/src/main/resources/static/pages/profile/profile.html
+++ b/src/main/resources/static/pages/profile/profile.html
@@ -204,7 +204,7 @@
                                         </div>
 
                                         <div class="col-sm-12">
-                                            <button class="submit_button rounded" onclick="updateProfile()">ثبت
+                                            <button class="submit_button rounded" ng-click="updateProfile()">ثبت
                                                 تغییرات</button>
                                         </div>
                                     </div>
