--- a/src/main/resources/static/pages/dashboard/dashboard.html
+++ b/src/main/resources/static/pages/dashboard/dashboard.html
@@ -32,7 +32,7 @@
 
 
                 <!-- login & register button -->
-                <div ng-controller="dashCtrl" class="nav-btns col-md-6  col-sm-6 col-12">
+                <div ng-controller="welcomeCtrl" class="nav-btns col-md-6  col-sm-6 col-12">
                     خوش آمدی {{name}}!
                     <button class="btn btn-primary"><i class="fas fa-user"></i></button>
                 </div>
