Users Assignees , Code Enhancement

--- a/src/main/resources/static/pages/CreateCase/case.html
+++ b/src/main/resources/static/pages/CreateCase/case.html
@@ -203,10 +203,10 @@
                                                     <select id="status" title="درجه اهمیت را انتخاب کنید" name="status"
                                                         class="text-right col-sm-3 selectpicker select-div"
                                                         data-live-search="true">
-                                                        <option>معمولی</option>
-                                                        <option>متوسط</option>
-                                                        <option>پیشنهاد</option>
-                                                        <option>اورژانسی</option>
+                                                        <option>باز</option>
+                                                        <option>بسته</option>
+                                                        <option>در حال بررسی</option>
+                                                        <option>تعویق</option>
                                                     </select>
 
                                                 </div>
